# joint-freespace-detection

./: CMakeLists.txt  README.md  segmentAllImages_temporal.sh
include/: colorLines.h  point.h  tinydir.h
segnet_tutorial_scripts/: segmentAllImages_script.sh
segnet_tutorial_scripts/Scripts/: compute_bn_statistics.py  segmentImage.py  segmentImageAndResize.py  segmentImageCityScape.py  segmentImageCityScapeGetProb.py~  test_segmentation_camvid.py  webcam_demo.py
src/: binary.cpp  colorLines.cpp  colorLines.cpp~  main.cpp
